// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotplotOptions Renders when hidden 1`] = `
<div
  className="form__options"
  style={
    Object {
      "height": 0,
      "opacity": 0,
      "overflow": "hidden",
    }
  }
>
  <Divider>
    Advanced options
  </Divider>
</div>
`;

exports[`DotplotOptions Renders when visible 1`] = `
<div
  className="form__options"
  style={
    Object {
      "height": "auto",
      "opacity": 1,
      "overflow": "auto",
    }
  }
>
  <Divider>
    Advanced options
  </Divider>
</div>
`;
